<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_210sdp"
            android:scaleType="fitXY"
            android:src="@drawable/im_background_home" />

        <ImageView
            android:id="@+id/ivVip"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_vip" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivVip"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/honey_florist_personal_use"
                android:text="@string/write_on_photo"
                android:textColor="@color/green"
                android:textSize="@dimen/_32ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decorate_your_photo"
                android:textColor="#ED7DB0"
                android:textSize="@dimen/_13ssp" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp">

        <TextView
            android:id="@+id/tvCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/border_text_create_project"
            android:gravity="center"
            android:padding="@dimen/_15sdp"
            android:text="@string/cre_pro"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvCreate"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTemp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/border_text_template"
                android:gravity="center"
                android:padding="@dimen/_15sdp"
                android:text="@string/temp"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:id="@+id/tvPro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/border_text_project"
                android:gravity="center"
                android:padding="@dimen/_15sdp"
                android:text="@string/pro"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/des"
            android:textColor="@color/text_empty"
            android:textSize="@dimen/_10ssp" />

    </RelativeLayout>
</LinearLayout>