<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    tools:context=".fragment.vip.VipTwoFragment">

    <RelativeLayout
        android:id="@+id/rlTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_184sdp"
            android:scaleType="fitXY"
            android:src="@drawable/iv_bg_vip_2" />

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/ic_back" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/rlTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlTop"
        android:orientation="vertical"
        android:padding="@dimen/_5sdp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/write_on_photo_pro"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp" />

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_vip" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/unlock_all_feature_and_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp" />
    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/vLock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlTitle"
        android:paddingStart="@dimen/_5sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivNoWaterMark"
                android:layout_width="@dimen/_55sdp"
                android:layout_height="@dimen/_55sdp"
                android:src="@drawable/iv_vip_pic_1" />

            <ImageView
                android:id="@+id/ivProTextDesign"
                android:layout_width="@dimen/_55sdp"
                android:layout_height="@dimen/_55sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:src="@drawable/iv_vip_pic_2" />

            <ImageView
                android:id="@+id/ivUnlockAllFont"
                android:layout_width="@dimen/_55sdp"
                android:layout_height="@dimen/_55sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:src="@drawable/iv_vip_pic_3" />

            <ImageView
                android:id="@+id/ivUnderLinePro"
                android:layout_width="@dimen/_55sdp"
                android:layout_height="@dimen/_55sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:src="@drawable/iv_vip_pic_4" />

            <ImageView
                android:id="@+id/TemplatePro"
                android:layout_width="@dimen/_55sdp"
                android:layout_height="@dimen/_55sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:src="@drawable/iv_vip_pic_5" />
        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vLock"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <RelativeLayout
            android:id="@+id/rlMonth"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_34sdp"
            android:background="@drawable/border_unclick_font"
            android:clickable="true"
            android:focusable="true"
            android:theme="@android:style/ThemeOverlay.Material.Dark"
            android:foreground="?android:attr/selectableItemBackground">

            <ImageView
                android:id="@+id/iv1"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_5sdp"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_un_choose" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_toEndOf="@+id/iv1"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/month"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_15sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/des_month"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlYear"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_34sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/border_unclick_font"
            android:clickable="true"
            android:focusable="true"
            android:theme="@android:style/ThemeOverlay.Material.Dark"
            android:foreground="?android:attr/selectableItemBackground">

            <ImageView
                android:id="@+id/iv2"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_5sdp"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_choose" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_toEndOf="@+id/iv2"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/year"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_15sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/des_year"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlLifeTime"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_34sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/border_unclick_font"
            android:clickable="true"
            android:focusable="true"
            android:theme="@android:style/ThemeOverlay.Material.Dark"
            android:foreground="?android:attr/selectableItemBackground">

            <ImageView
                android:id="@+id/iv3"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_5sdp"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_un_choose" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_toEndOf="@+id/iv3"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/lifetime"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_15sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/des_lifetime"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/border_text_create_project"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/str_continue"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/des_vip_1"
            android:textColor="@color/gray"
            android:textSize="@dimen/_10ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/des_vip_2"
            android:textColor="@color/gray"
            android:textSize="@dimen/_10ssp" />
    </LinearLayout>

</RelativeLayout>