<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="@dimen/_20sdp"
    android:layout_marginEnd="@dimen/_20sdp"
    android:background="@drawable/boder_dialog"
    android:orientation="vertical"
    android:paddingStart="@dimen/_10sdp"
    android:paddingTop="@dimen/_10sdp"
    android:paddingEnd="@dimen/_10sdp"
    android:paddingBottom="@dimen/_5sdp">

    <TextView
        android:id="@+id/tvDes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/poppins_regular"
        android:padding="@dimen/_5sdp"
        android:text="@string/del_sticker"
        android:textColor="#6F6F6F"
        android:textSize="@dimen/_13ssp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#AFAFAF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_5sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingEnd="@dimen/_5sdp">

        <TextView
            android:id="@+id/tvNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_medium"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/no"
            android:textColor="@color/green"
            android:textSize="@dimen/_15ssp" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="#AFAFAF" />

        <TextView
            android:id="@+id/tvYes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_regular"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/yes"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp" />
    </LinearLayout>
</LinearLayout>