<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="@dimen/_20sdp"
    android:layout_marginEnd="@dimen/_20sdp"
    android:background="@drawable/boder_dialog"
    android:padding="@dimen/_5sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="@dimen/_4sdp">

        <ImageView
            android:id="@+id/ivbg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_198sdp"
            android:src="@drawable/im_request_permission" />

        <ImageView
            android:id="@+id/ivExitPer"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="@dimen/_5sdp"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_exit" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivbg"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="vertical"
            android:padding="@dimen/_4sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/poppins_semi_bold"
                android:gravity="center"
                android:text="@string/rp_1"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/rp_2"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@color/gray_2" />

            <TextView
                android:id="@+id/tvAllow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppins_semi_bold"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/allow_per"
                android:textColor="@color/green"
                android:textSize="@dimen/_15ssp" />
        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>